Removed Layout component. Added Footer component. Fixed carousel overflow.

--- a/src/app/shared/components/carousel/carousel.component.scss
+++ b/src/app/shared/components/carousel/carousel.component.scss
@@ -10,7 +10,7 @@
   position: relative;
   height: 100%;
   width: 100%;
-  // overflow: hidden;
+  overflow: hidden;
   // border-radius: 0.5em;
 }
 
